--- a/index.html
+++ b/index.html
@@ -1,82 +1,132 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<title>PiSearchDoop</title>
 
-  <head>
-    <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Pisearchdoop : Hadoopを使用して円周率から数値をリアルタイム検索" />
+<!-- サンプルページの為使用しない -->
+<!-- リモートオブジェクトのインタフェースを取得する -->
+<!-- <script type="text/javascript" -->
+<!-- 	src="http://localhost:8080/pisearchdoop/dwr/interface/JobProgressService.js"> -->
+<!-- </script> -->
+<!-- DWRから提供されている共通JavaScriptの読み込み -->
+<!-- <script type="text/javascript" src="http://localhost:8080/pisearchdoop/dwr/engine.js"> </script> -->
+<!-- <script type="text/javascript" src="http://localhost:8080/pisearchdoop/dwr/util.js"> </script> -->
+<!-- サンプルページの為使用しない end -->
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+<!-- cssファイル読み込み -->
+<!-- ライブラリ -->
+<link rel="stylesheet" type="text/css" href="css/jquery.easy-pie-chart.css">
+<!-- 作成したcssファイル -->
+<link rel="stylesheet" href="css/pisearchdoop.css" type="text/css" />
+<link rel="stylesheet" href="css/tablesorter.css" type="text/css" />
 
-    <title>Pisearchdoop</title>
-  </head>
+<!-- jsファイル読み込み -->
+<!-- ライブラリ -->
+<script type="text/javascript" src="js/jquery-2.0.2.min.js"></script>
+<script type="text/javascript" src="js/jquery.easy-pie-chart.js"></script>
+<script type="text/javascript" src="js/jquery.tablesorter.min.js"></script>
+<script type="text/javascript" src="js/footerFixed.js"></script>
+<!-- 作成したjsファイル -->
+<script type="text/javascript" src="js/pisearchdoop.js"> </script>
 
-  <body>
+</head>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/VSC3BU/pisearchdoop">View on GitHub</a>
+<body>
 
-          <h1 id="project_title">Pisearchdoop</h1>
-          <h2 id="project_tagline">Hadoopを使用して円周率から数値をリアルタイム検索</h2>
+	<!-- HEADER -->
+	<div id="header">
+		<!-- wrapper-header -->
+		<div class="wrapper">
+			<img id="logo" src="img/logo.png" alt="HadoopDemo" />
+		</div>
+		<!-- ENDS wrapper-header -->
+	</div>
+	<!-- ENDS HEADER -->
 
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/VSC3BU/pisearchdoop/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/VSC3BU/pisearchdoop/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
+	<!-- GRADATION -->
+	<div id="gradation">
+	</div>
+	<!-- ENDS GRADATION -->
 
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <p>現在作成中！以下自動作成ページです。
-プロジェクトページ：<a href="https://github.com/VSC3BU/pisearchdoop">https://github.com/VSC3BU/pisearchdoop</a></p>
+	<div id="mainFrame">
+		<div id="pisearchField">
 
-<h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+			<!-- 見出し -->
+			<div id="captionField">
+				<h2>円周率検索<span> ~ using Hadoop ~ </span></h2>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+			</div>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
+			<!-- テキストボックス・ボタン -->
+			<div id="inputField">
+				Key：<input type="text" id="key" required /> <input type="button"
+					value="検索" onclick="findBtn()" id="findBtn" /> <input
+					type="button" value="クリア" onclick="clearBtn()" />
+			</div>
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+			<!-- ステータス -->
+			<div id="statusField">
+				Status：<span id="status"></span>
+			</div>
 
-<h3>
-<a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+			<!-- loading -->
+			<div id="loadingField">
+				<img id="loading" src="img/loading_blank.png">
+			</div>
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
+			<!-- 開始・終了時刻 -->
+			<div id="timeField">
+				<div id="start">
+					StartTime：<span id="startDate"></span>
+				</div>
+				<div id="finish">
+					FinishTime：<span id="finishDate"></span>
+				</div>
+			</div>
 
-<h3>
-<a name="rather-drive-stick" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
+			<!-- 検索結果 -->
+			<div id="tableField">
+				<div id="tableheader">
+					<div id="tablecontent">
+						<table id="tablesorter">
+							<thead>
+								<tr>
+									<th>No</th>
+									<th>Digits</th>
+									<th>Comment</th>
+								</tr>
+							</thead>
+							<tbody id="tablebody">
+							</tbody>
+						</table>
+					</div>
+				</div>
+			</div>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+			<!-- headline -->
+			<div id="headline">
+				<span class="main">Hadoopを使用して円周率から数値を検索</span>
+				<span class="sub">ソースコードはGitHubからダウンロードできます。</span>
+				<a href="https://github.com/VSC3BU/pisearchdoop" target="_blank"
+					id="link" class="link-button-big"><span>GitHub</span></a>
+			</div>
+			<!-- ENDS headline -->
 
-<h3>
-<a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+		</div>
+	</div>
 
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+	<!-- Bottom -->
+	<div id="footer">
+		<!-- wrapper-bottom -->
+		<div class="wrapper">
+			<div id="footer-text">
+				2014 Solkai3 Project <a href="http://www.valuenet.co.jp"target="_blank">ValueSoftware</a>
+			</div>
+		</div>
+		<!-- ENDS wrapper-bottom -->
+	</div>
+	<!-- ENDS Bottom -->
 
-<h3>
-<a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
-      </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Pisearchdoop maintained by <a href="https://github.com/VSC3BU">VSC3BU</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
-
-    
-
-  </body>
+</body>
 </html>
